fix overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
